--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 
 
 }
-h2 {
+h2, #bestPrice, #comparison1, #comparison2, #avgPrice1, #avgPrice2, #name1, #name2 {
 	text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
 	             0px 8px 13px rgba(0,0,0,0.1),
 	             0px 18px 23px rgba(0,0,0,0.1);
